<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IM-Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <!-- index -->
    <string name="index_title_connect">联系人</string>
    <string name="index_add_connect">添加</string>
    <!-- login -->
    <string name="login_btn">登录</string>
    <string name="login_tip1">用户名与密码不能为空!</string>
    <string name="login_regist_btn">注册</string>
    <!-- chat -->
    <string name="chat_send">发送</string>
    <string name="chat_msg_back">消息</string>
    <string name="chat_longpress">长按语音</string>
    <!-- setting -->
    <string name="setting_title">设置</string>
    <string name="setting_txt_icon">头像</string>
    <string name="setting_chat_clear">清除聊天记录</string>
    <string name="chat_clear_tiptitle">是否确定清除所有聊天记录?</string>
    <!-- selecticon -->
    <string name="selecticon_camera">拍照</string>
    <string name="selecticon_photo">从相册选择</string>
    <!-- 显示更多 -->
    <string name="more_videophone">视频通话</string>
    <string name="more_file">文件</string>
    <string name="more_tip">提醒</string>
    <string name="more_music">音乐</string>
    <string name="more_location">位置</string>
    <string name="more_camera">拍照</string>
    <string name="more_pgone">IM电话</string>
    <string name="more_photo">照片</string>
    <string name="more_shake">抖一抖</string>
    <!-- search -->
    <string name="search_title">搜索</string>
    <string name="search_btn">搜索</string>
    <!-- 位置 -->
    <string name="location_title">位置</string>
    <!-- 相册 -->
    <string name="photo_title">相册</string>
    <!-- 添加联系人 -->
    <string name="addconnect_title">个人信息</string>
    <string name="addconnect_add">添加好友</string>
    <string name="addconnect_msg">发送消息</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_username">用户名</string>
    <string name="register_userpsw">密码</string>
    <string name="register_sure">注册</string>
    <!-- 新联系人 -->
    <string name="newconnect_title">新联系人</string>
    <!-- 发表动态 -->
    <string name="senddynam_title">个人动态</string>
    <string name="senddynam_send">发表</string>
    <string name="senddynam_input_hint">说点什么...</string>
    <!--  -->


    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <!-- 下拉上拉左右滑动listview -->
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>

    <!-- 界面上下滑动加载数据时显示的数据 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>