<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dip"
        android:paddingRight="8dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_pick_camera"
                style="@style/select_img_txt"
                android:background="@drawable/item_topbg_select"
                android:text="@string/selecticon_camera" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/devide_line" />

            <Button
                android:id="@+id/btn_pick_photo"
                style="@style/select_img_txt"
                android:background="@drawable/item_bottombg_select"
                android:text="@string/selecticon_photo" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_close_selectimg"
            style="@style/select_img_txt"
            android:layout_marginTop="20dip"
            android:background="@drawable/item_bg_select"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>