<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_title_bg"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/tv_addconnect_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:drawableLeft="@drawable/gbk"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_addconnect_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="@string/addconnect_add"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addconnect_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>