<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_body_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_title_bg"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/tv_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:drawableLeft="@drawable/gbk"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_item_margin_top"
        android:background="@drawable/setting_item_select"
        android:paddingBottom="@dimen/setting_item_padding_tb"
        android:paddingLeft="@dimen/setting_item_padding_lr"
        android:paddingRight="@dimen/setting_item_padding_lr"
        android:paddingTop="@dimen/setting_item_padding_tb" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_txt_icon"
            android:textColor="@color/black_1"
            android:textSize="@dimen/setting_item_txtsize" />

        <ImageView
            android:id="@+id/iv_userinfo_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/gco" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_setting_chat_clear"
        style="@style/setting_item_normal"
        android:text="@string/setting_chat_clear"/>

</LinearLayout>