<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_top_bg"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/chat_clear_tiptitle"
        android:textColor="#000000"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/gray_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_chat_delete_sure"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/dialog_btn_left_default_bg"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/sure"
            android:textColor="@color/blue_2"
            android:textSize="18sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="@color/gray_4" />

        <TextView
            android:id="@+id/tv_chat_delete_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/dialog_btn_right_default_bg"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/cancel"
            android:textColor="@color/red_1"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>