<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/gray_7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_7"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/setting_title_bg"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <TextView
                android:id="@+id/tv_sdynamic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:drawableLeft="@drawable/gbk"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sdynamic_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:gravity="center_vertical"
                android:text="@string/senddynam_send"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/senddynam_title"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="#ffffff"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_sdynamic_content"
                android:layout_width="match_parent"
                android:layout_height="140dip"
                android:layout_margin="5dip"
                android:gravity="left"
                android:hint="@string/senddynam_input_hint"
                android:background="@drawable/input_white_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <com.hwant.view.XGridView
                android:id="@+id/gv_sdynamic_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:focusable="true"
                android:horizontalSpacing="5dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="none"
                android:verticalSpacing="5dip" >
            </com.hwant.view.XGridView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>