<?xml version="1.0" encoding="utf-8"?>
<com.hwant.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hwant.activity"
    android:id="@+id/sl_manage_item"
    android:layout_width="match_parent"
    android:layout_height="150dip"
    android:background="#ffffff"
    app:clickToClose="true" >

    <LinearLayout
        android:layout_width="160dip"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_manageconnect_agree"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#00AEEF"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_manageconnect_refuse"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#F64E78"
            android:gravity="center"
            android:text="@string/refuse"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingLeft="8dip"
        android:paddingTop="5dip" >

        <com.hwant.ximageview.CircleImageView
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/ic_launcher"
            app:border_color="#D3D3D3"
            app:border_width="2dp" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</com.hwant.swipe.SwipeLayout>