<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_6"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_title_bg"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/tv_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:drawableLeft="@drawable/gbk"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:layout_weight="1.0"
            android:background="@drawable/search_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="6dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="6dip" >

            <EditText
                android:id="@+id/et_input_connect"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:drawableLeft="@drawable/searchbar_icon"
                android:lines="1"
                android:maxLines="1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_search_inputclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ieb"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_connect_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text="@string/search_btn"
            android:textColor="@color/blue_3"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:fadingEdge="none"
        android:listSelector="@null" />

</LinearLayout>